--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="Pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="shortcut icon" href="catiocho.png" type="image/x-icon">
     <title>Divirta-se</title>
 </head>
+
 <body>
     <div class="container">
         <h1>Troca cor</h1>
@@ -21,9 +23,9 @@
             <button id="butao-noite">Noite</button>
         </div>
         <div class="container-botao">
-            <button id="butao-cachorro">Cachorro</button>
-            <button id="butao-gato">Gato</button>
-            <button id="butao-galo">Galo</button>
+            <button id="butao-cachorro" onclick="trocaImagem('../gatito.png')">Cachorro</button>
+            <button id="butao-gato" onclick="trocaImagem('../gatito.png')">Gato</button>
+            <button id="butao-galo" onclick="trocaImagem('../gatito.png')">Galo</button>
         </div>
     </div>
 
@@ -32,4 +34,5 @@
 
     <script src="main.js"></script>
 </body>
+
 </html>
